# trading-journal

./: .gitignore  AGENTS.md  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: release.yml
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/scripts/: prepare-dev-sidecar.mjs
desktop/src/: App.tsx  api.ts  style.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: .gitignore
desktop/src-tauri/binaries/engine-sidecar-runtime/: .development-placeholder
desktop/src-tauri/src/: main.rs
engine/: __init__.py  app.py  config.py  runtime.py  time_utils.py
engine/agent/: loop.py  planner.py  profiles.py  prompts.py  schema.py  tools.py
engine/agent/tools/: __init__.py  market.py  registry.py  reports.py
engine/analysis/: evidence.py  llm_enhancement.py  market_pipeline.py  report_builder.py  stock_pipeline.py  tracking.py  watchlist.py
engine/data/: enrichment.py  market_data.py  news_data.py  normalize.py
engine/data/providers/: __init__.py  a_share.py  hk_stock.py  us_stock.py
engine/indicators/: __init__.py  chips.py  levels.py  momentum.py  patterns.py  trend.py  volume.py
engine/storage/: db.py  migrations.py  models.py
engine/strategies/: base.py  registry.py
engine/strategies/builtin/: bottom_accumulation.yaml  breakout_volume.yaml  candle_squeeze.yaml  chip_repair.yaml  event_catalyst.yaml  expectation_reset.yaml  ma_reversal.yaml  market_leader.yaml  one_yang_three_yin.yaml  pullback_entry.yaml  quality_growth.yaml  range_rotation.yaml  risk_first.yaml  sentiment_repair.yaml  swing_structure.yaml  theme_heat.yaml  trend_following.yaml
engine/tests/: test_agent.py  test_app.py  test_indicators.py  test_intelligence.py  test_llm_enhancement.py  test_market_review_enhancements.py  test_normalize.py  test_pipelines.py  test_provider_fallbacks.py  test_strategies.py
packaging/: engine_sidecar.py
tools/: build_sidecar.py  smoke_test_sidecar.py
