[project]
name = "trading-journal"
version = "0.2.0"
description = "Tauri desktop stock research loop for watchlists, market review, stock reports and chat."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.14",
    "yfinance>=0.2.40",
    "tushare>=1.4",
    "openai>=1.40",
    "pytest>=8.0",
]

[project.scripts]
tj-engine = "engine.app:main"
tj-runtime = "engine.runtime:main"

[tool.pytest.ini_options]
testpaths = ["engine/tests"]
pythonpath = ["."]
