[package]
name = "trading-journal"
version = "0.2.0"
description = "Trading Journal desktop shell"
authors = ["Trading Journal"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

